--- a/src/ui/profile_preferences.ui
+++ b/src/ui/profile_preferences.ui
@@ -2041,10 +2041,189 @@ you can use it but there could be issues with aligning columns of text</string>
           <item row="14" column="0" colspan="4">
            <widget class="QCheckBox" name="checkBox_boldIsBright">
             <property name="toolTip">
-             <string>&lt;p&gt;Server uses BOLD to make Light 8 colors (only for some 16 Color MUDs)&lt;/p&gt;&lt;p&gt;Some older Game Servers support eight different colors which are selected by using the original eight &quot;Set Graphic Rendition&quot; &lt;tt&gt; &amp;lt;SGR&amp;gt; 30&lt;/tt&gt; (black) to &lt;tt&gt;37&lt;/tt&gt; (white)&lt;/tt&gt; ANSI ESC color codes and combining those with the &lt;tt&gt;&amp;lt;SGR&amp;gt; 1&lt;/tt&gt; (bold or more intense) code to provide a second set of eight codes for sixteen in total. This checkbox causes this use of the &lt;tt&gt;&amp;lt;SGR&amp;gt; 1&lt;/tt&gt; code however it should not be used if the Game Server only uses eight colors or selects the &quot;brighter&quot; eight colors with &lt;tt&gt;&amp;lt;SGR&amp;gt; 90&lt;/tt&gt; (light black) to &lt;tt&gt;&amp;lt;SGR&amp;gt; 97&lt;/tt&gt; (light white) {and &lt;tt&gt;100&lt;/tt&gt; to &lt;tt&gt;107&lt;/tt&gt; for the same as a background} uses sixteeen selects the second set of eight colors with alternate &lt;/p&gt;&lt;p&gt;&lt;i&gt;Older versions of Mudlet had code that effectively had this option permanently enabled. However nowadays it interferes with using the BOLD attribute to provide &lt;b&gt;bold&lt;/b&gt; text alongside the less often used FAINT attribute to provide &lt;span style=&quot; font-weight: 200&quot;&gt;faint&lt;/span&gt; and &lt;span style=&quot; font-weight: 600&quot;&gt;demi-bold&lt;/span&gt; text effects.&lt;/p&gt;</string>
+             <string>&lt;p&gt;Server uses BOLD to make Light 8 colors (only for some 16 Color MUDs)&lt;/p&gt;&lt;p&gt;Some older Game Servers support eight different colors which are selected by using the original eight &quot;Set Graphic Rendition&quot; &lt;tt&gt; &amp;lt;SGR&amp;gt; 30&lt;/tt&gt; (black) to &lt;tt&gt;37&lt;/tt&gt; (white)&lt;/tt&gt; ANSI ESC color codes and combine those with the &lt;tt&gt;&amp;lt;SGR&amp;gt; 1&lt;/tt&gt; (bold or more intense) code to provide a second set of eight colors for sixteen in total. This checkbox causes this use of the &lt;tt&gt;&amp;lt;SGR&amp;gt; 1&lt;/tt&gt; code however it should not be used if the Game Server:&lt;ul&gt;&lt;li&gt;only uses eight colors&lt;/li&gt;&lt;li&gt;uses more than sixteen colors&lt;/li&gt;&lt;li&gt;uses sixteen colors but selects the &quot;brighter&quot; eight colors with &lt;tt&gt;&amp;lt;SGR&amp;gt; 90&lt;/tt&gt; (light black) to &lt;tt&gt;&amp;lt;SGR&amp;gt; 97&lt;/tt&gt; (light white) {and &lt;tt&gt;100&lt;/tt&gt; to &lt;tt&gt;107&lt;/tt&gt; for the same as a background} of the sixteeen&lt;/li&gt;&lt;/ul&gt;&lt;/p&gt;&lt;p&gt;&lt;i&gt;Older versions of Mudlet had code that effectively had this option permanently enabled. However nowadays it interferes with using the BOLD attribute to provide &lt;b&gt;bold&lt;/b&gt; text alongside the less often used FAINT attribute to provide &lt;span style=&quot; font-weight: 200&quot;&gt;faint&lt;/span&gt; and &lt;span style=&quot; font-weight: 600&quot;&gt;demi-bold&lt;/span&gt; text effects.&lt;/p&gt;</string>
             </property>
             <property name="text">
              <string>BOLD is Bright</string>
+            </property>
+           </widget>
+          </item>
+         </layout>
+        </widget>
+       </item>
+       <item>
+        <widget class="QGroupBox" name="groupBox_sgrCodesSeen">
+         <property name="title">
+          <string>&quot;Set Graphics Rendition&quot; codes detected (check this to show details)</string>
+         </property>
+         <property name="checkable">
+          <bool>true</bool>
+         </property>
+         <property name="checked">
+          <bool>false</bool>
+         </property>
+         <layout class="QGridLayout" name="gridLayout_groupBox_sgrColorsSeen">
+          <item row="0" column="0">
+           <widget class="QCheckBox" name="checkBox_bold">
+            <property name="enabled">
+             <bool>false</bool>
+            </property>
+            <property name="text">
+             <string>Bold (&quot;1&quot;)</string>
+            </property>
+           </widget>
+          </item>
+          <item row="0" column="1">
+           <widget class="QCheckBox" name="checkBox_faint">
+            <property name="enabled">
+             <bool>false</bool>
+            </property>
+            <property name="text">
+             <string>Faint (&quot;2&quot;)</string>
+            </property>
+           </widget>
+          </item>
+          <item row="1" column="0">
+           <widget class="QCheckBox" name="checkBox_blinking">
+            <property name="enabled">
+             <bool>false</bool>
+            </property>
+            <property name="text">
+             <string>Blinking ('5' = slow or '6' = rapid)</string>
+            </property>
+           </widget>
+          </item>
+          <item row="1" column="1">
+           <widget class="QCheckBox" name="checkBox_concealed">
+            <property name="enabled">
+             <bool>false</bool>
+            </property>
+            <property name="text">
+             <string>Concealed ('8')</string>
+            </property>
+           </widget>
+          </item>
+          <item row="2" column="0">
+           <widget class="QCheckBox" name="checkBox_altFont">
+            <property name="enabled">
+             <bool>false</bool>
+            </property>
+            <property name="text">
+             <string>Alterate Font ('11' to '19')</string>
+            </property>
+           </widget>
+          </item>
+          <item row="3" column="0">
+           <widget class="QCheckBox" name="checkBox_basic8FgColors">
+            <property name="enabled">
+             <bool>false</bool>
+            </property>
+            <property name="toolTip">
+             <string extracomment="The text 'BOLD is Bright' mentioned here should be the same as the text appearing for the 'checkbox_boldIsBright' control.">&lt;p&gt;Basic eight foreground colors using '&lt;tt&gt;3?&lt;/tt&gt;' where ? is an integer from &lt;tt&gt;0&lt;/tt&gt; to &lt;tt&gt;7&lt;/tt&gt;.&lt;/p&gt;&lt;p&gt;&lt;i&gt;If only this box for &lt;b&gt;foreground&lt;/b&gt; colors is checked &lt;u&gt;and so is the &lt;tt&gt;Bold&lt;/tt&gt; one&lt;/u&gt; then it is likely that the Game Server is using the latter to indicated that it wants Mudlet to operate in the &quot;BOLD is Bright&quot; mode where that attribute is used to select a second set of eight colors (the right column of colours in the box above) and you should activate that option in the box above.&lt;/i&gt;&lt;/p&gt;</string>
+            </property>
+            <property name="text">
+             <string>Basic 8 foreground colors</string>
+            </property>
+           </widget>
+          </item>
+          <item row="3" column="1">
+           <widget class="QCheckBox" name="checkBox_basic8BgColors">
+            <property name="enabled">
+             <bool>false</bool>
+            </property>
+            <property name="toolTip">
+             <string>&lt;p&gt;Basic eight background colors using '&lt;tt&gt;4?&lt;/tt&gt;' where ? is an integer from &lt;tt&gt;0&lt;/tt&gt; to &lt;tt&gt;7&lt;/tt&gt;.&lt;/p&gt;</string>
+            </property>
+            <property name="text">
+             <string>Basic 8 background colors</string>
+            </property>
+           </widget>
+          </item>
+          <item row="4" column="0">
+           <widget class="QCheckBox" name="checkBox_additional8FgColors">
+            <property name="enabled">
+             <bool>false</bool>
+            </property>
+            <property name="toolTip">
+             <string>&lt;p&gt;Second eight of sixteen foreground colors using '&lt;tt&gt;9?&lt;/tt&gt;' where ? is an integer from &lt;tt&gt;0&lt;/tt&gt; to &lt;tt&gt;7&lt;/tt&gt;.&lt;/p&gt;</string>
+            </property>
+            <property name="text">
+             <string>Additional 8 foreground colors for 16 in total</string>
+            </property>
+           </widget>
+          </item>
+          <item row="4" column="1">
+           <widget class="QCheckBox" name="checkBox_additional8BgColors">
+            <property name="enabled">
+             <bool>false</bool>
+            </property>
+            <property name="toolTip">
+             <string>&lt;p&gt;Second eight of sixteen background colors using '&lt;tt&gt;10?&lt;/tt&gt;' where ? is an integer from &lt;tt&gt;0&lt;/tt&gt; to &lt;tt&gt;7&lt;/tt&gt;.&lt;/p&gt;</string>
+            </property>
+            <property name="text">
+             <string>Additional 8 background colors for 16 in total</string>
+            </property>
+           </widget>
+          </item>
+          <item row="5" column="0">
+           <widget class="QCheckBox" name="checkBox_256FgColors">
+            <property name="enabled">
+             <bool>false</bool>
+            </property>
+            <property name="toolTip">
+             <string>&lt;p&gt;256 foreground colors using '&lt;tt&gt;38;5;N&lt;/tt&gt;' or '&lt;tt&gt;38:5:N&lt;/tt&gt;' where N is an integer from &lt;tt&gt;0&lt;/tt&gt; to &lt;tt&gt;255&lt;/tt&gt;.&lt;/p&gt;</string>
+            </property>
+            <property name="text">
+             <string>256 foreground colors</string>
+            </property>
+           </widget>
+          </item>
+          <item row="5" column="1">
+           <widget class="QCheckBox" name="checkBox_256BgColors">
+            <property name="enabled">
+             <bool>false</bool>
+            </property>
+            <property name="toolTip">
+             <string>&lt;p&gt;256 background colors using '&lt;tt&gt;48;5;N&lt;/tt&gt;' or '&lt;tt&gt;48:5:N...&lt;/tt&gt;' where N is an integer from &lt;tt&gt;0&lt;/tt&gt; to &lt;tt&gt;255&lt;/tt&gt;.&lt;/p&gt;</string>
+            </property>
+            <property name="text">
+             <string>256 background colors</string>
+            </property>
+           </widget>
+          </item>
+          <item row="6" column="0">
+           <widget class="QCheckBox" name="checkBox_16MFgColors">
+            <property name="enabled">
+             <bool>false</bool>
+            </property>
+            <property name="toolTip">
+             <string>&lt;p&gt;16M foreground colors using '&lt;tt&gt;38;2;R;G;B...&lt;/tt&gt;', '&lt;tt&gt;38;2;;R;G;B...&lt;/tt&gt;' or '&lt;tt&gt;38:2::R:G:B...&lt;/tt&gt;' where R, G and B are integers from &lt;tt&gt;0&lt;/tt&gt; to &lt;tt&gt;255&lt;/tt&gt;.&lt;/p&gt;</string>
+            </property>
+            <property name="text">
+             <string>16M foreground colors</string>
+            </property>
+           </widget>
+          </item>
+          <item row="6" column="1">
+           <widget class="QCheckBox" name="checkBox_16MBgColors">
+            <property name="enabled">
+             <bool>false</bool>
+            </property>
+            <property name="toolTip">
+             <string>&lt;p&gt;16M background colors using '&lt;tt&gt;48;2;R;G;B...&lt;/tt&gt;', '&lt;tt&gt;48;2;;R;G;B...&lt;/tt&gt;' or '&lt;tt&gt;48:2::R:G:B...&lt;/tt&gt;' where R, G and B are integers from &lt;tt&gt;0&lt;/tt&gt; to &lt;tt&gt;255&lt;/tt&gt;.&lt;/p&gt;</string>
+            </property>
+            <property name="text">
+             <string>16M background colors</string>
+            </property>
+           </widget>
+          </item>
+          <item row="7" column="0" colspan="2" alignment="Qt::AlignHCenter">
+           <widget class="QToolButton" name="toolButton_resetSgrCodeDetection">
+            <property name="enabled">
+             <bool>true</bool>
+            </property>
+            <property name="text">
+             <string>Reset detection</string>
             </property>
            </widget>
           </item>
@@ -4352,6 +4531,7 @@ you can use it but there could be issues with aligning columns of text</string>
   <tabstop>pushButton_cyan</tabstop>
   <tabstop>pushButton_white</tabstop>
   <tabstop>checkBox_allowServerToRedefineColors</tabstop>
+  <tabstop>checkBox_boldIsBright</tabstop>
   <tabstop>pushButton_lBlack</tabstop>
   <tabstop>pushButton_lRed</tabstop>
   <tabstop>pushButton_lGreen</tabstop>
@@ -4361,6 +4541,8 @@ you can use it but there could be issues with aligning columns of text</string>
   <tabstop>pushButton_lCyan</tabstop>
   <tabstop>pushButton_lWhite</tabstop>
   <tabstop>pushButton_resetColors</tabstop>
+  <tabstop>groupBox_sgrCodesSeen</tabstop>
+  <tabstop>toolButton_resetSgrCodeDetection</tabstop>
   <tabstop>pushButton_saveMap</tabstop>
   <tabstop>pushButton_loadMap</tabstop>
   <tabstop>comboBox_mapHistory</tabstop>
@@ -4448,6 +4630,19 @@ you can use it but there could be issues with aligning columns of text</string>
   <tabstop>comboBox_store_passwords_in</tabstop>
   <tabstop>timeEdit_timerDebugOutputMinimumInterval</tabstop>
   <tabstop>doubleSpinBox_networkPacketTimeout</tabstop>
+  <tabstop>checkBox_bold</tabstop>
+  <tabstop>checkBox_faint</tabstop>
+  <tabstop>checkBox_blinking</tabstop>
+  <tabstop>checkBox_concealed</tabstop>
+  <tabstop>checkBox_altFont</tabstop>
+  <tabstop>checkBox_basic8FgColors</tabstop>
+  <tabstop>checkBox_basic8BgColors</tabstop>
+  <tabstop>checkBox_additional8FgColors</tabstop>
+  <tabstop>checkBox_additional8BgColors</tabstop>
+  <tabstop>checkBox_256FgColors</tabstop>
+  <tabstop>checkBox_256BgColors</tabstop>
+  <tabstop>checkBox_16MFgColors</tabstop>
+  <tabstop>checkBox_16MBgColors</tabstop>
  </tabstops>
  <resources>
   <include location="../mudlet.qrc"/>
