--- a/src/ui/profile_preferences.ui
+++ b/src/ui/profile_preferences.ui
@@ -3649,7 +3649,17 @@ you can use it but there could be issues with aligning columns of text</string>
             </property>
            </widget>
           </item>
-          <item row="1" column="0">
+          <item row="1" column="0" colspan="2">
+           <widget class="QCheckBox" name="checkBox_advertiseScreenReader">
+            <property name="toolTip">
+             <string></string>
+            </property>
+            <property name="text">
+             <string>Advertise screen reader use to games supporting MTTS (Mud Terminal Type Standard)</string>
+            </property>
+           </widget>
+          </item>
+          <item row="2" column="0">
            <widget class="QLabel" name="label_blankLinesBehaviour">
             <property name="text">
              <string>When the game sends blank lines:</string>
@@ -3659,7 +3669,7 @@ you can use it but there could be issues with aligning columns of text</string>
             </property>
            </widget>
           </item>
-          <item row="1" column="1">
+          <item row="2" column="1">
            <widget class="QComboBox" name="comboBox_blankLinesBehaviour">
             <item>
              <property name="text">
@@ -3678,7 +3688,7 @@ you can use it but there could be issues with aligning columns of text</string>
             </item>
            </widget>
           </item>
-          <item row="2" column="0">
+          <item row="3" column="0">
            <widget class="QLabel" name="label_caretModeKey">
             <property name="text">
              <string>Switch between input line and main window using:</string>
@@ -3688,7 +3698,7 @@ you can use it but there could be issues with aligning columns of text</string>
             </property>
            </widget>
           </item>
-          <item row="2" column="1">
+          <item row="3" column="1">
            <widget class="QComboBox" name="comboBox_caretModeKey">
             <item>
              <property name="text">
@@ -3780,6 +3790,13 @@ you can use it but there could be issues with aligning columns of text</string>
            <widget class="QCheckBox" name="mFORCE_CHARSET_NEGOTIATION_OFF">
             <property name="text">
              <string>Force CHARSET negotiation off</string>
+            </property>
+           </widget>
+          </item>
+          <item row="2" column="1">
+           <widget class="QCheckBox" name="mForceMTTSNegotiationOff">
+            <property name="text">
+             <string>Force MTTS negotiation off</string>
             </property>
            </widget>
           </item>
@@ -4279,6 +4296,7 @@ you can use it but there could be issues with aligning columns of text</string>
   <tabstop>lineEdit_proxyPassword</tabstop>
   <tabstop>toolButton_resetMainWindowShortcuts</tabstop>
   <tabstop>checkBox_announceIncomingText</tabstop>
+  <tabstop>checkBox_advertiseScreenReader</tabstop>
   <tabstop>comboBox_blankLinesBehaviour</tabstop>
   <tabstop>comboBox_caretModeKey</tabstop>
   <tabstop>mFORCE_MCCP_OFF</tabstop>
@@ -4286,6 +4304,7 @@ you can use it but there could be issues with aligning columns of text</string>
   <tabstop>mFORCE_CHARSET_NEGOTIATION_OFF</tabstop>
   <tabstop>checkBox_mUSE_FORCE_LF_AFTER_PROMPT</tabstop>
   <tabstop>mFORCE_MXP_NEGOTIATION_OFF</tabstop>
+  <tabstop>mForceMTTSNegotiationOff</tabstop>
   <tabstop>buttonPurgeMediaCache</tabstop>
   <tabstop>checkbox_noAutomaticUpdates</tabstop>
   <tabstop>search_engine_combobox</tabstop>
