--- a/src/ui/profile_preferences.ui
+++ b/src/ui/profile_preferences.ui
@@ -313,6 +313,16 @@
         </widget>
        </item>
        <item>
+         <widget class="QCheckBox" name="checkBox_checkMudletDefault">
+           <property name="toolTip">
+             <string>&lt;p&gt;Open &lt;code&gt;telnet://&lt;/code&gt; links with Mudlet&lt;/p&gt;</string>
+           </property>
+           <property name="text">
+             <string>Always check if Mudlet is your default client</string>
+           </property>
+         </widget>
+       </item>
+       <item>
         <widget class="QGroupBox" name="groupBox_protocols">
          <property name="title">
           <string>Game protocols</string>
