--- a/src/mudlet.qrc
+++ b/src/mudlet.qrc
@@ -11,9 +11,10 @@
         <file>icons/3klogo.png</file>
         <file>icons/3slogo.png</file>
         <file>icons/aardwolf_mud.png</file>
-        <file>icons/accessories-text-editor.png</file>
-        <file>icons/achaea_120_30.png</file>
         <file>icons/abandonedrealms_icon.jpg</file>
+        <file>icons/accessories-text-editor.png</file>
+        <file>icons/accursed_lands.png</file>
+        <file>icons/achaea_120_30.png</file>
         <file>icons/aetolia_120_30.png</file>
         <file>icons/application-exit.png</file>
         <file>icons/application-json.png</file>
@@ -21,9 +22,9 @@
         <file>icons/applications-accessories.png</file>
         <file>icons/applications-engineering.png</file>
         <file>icons/applications-internet.png</file>
+        <file>icons/arrow-down_grey-16x.png</file>
         <file>icons/arrow-down-16x.png</file>
         <file>icons/arrow-down.png</file>
-        <file>icons/arrow-down_grey-16x.png</file>
         <file>icons/arrow-down_grey.png</file>
         <file>icons/arrow-right-16x.png</file>
         <file>icons/arrow-right.png</file>
